media/Radarr/service.yml
kind: Service
apiVersion: v1
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
